<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:useDefaultMargins="true"
    android:background="@drawable/editgalaxyscreen"
    android:id="@+id/gridLayout"
    android:rowCount="5"
    android:columnCount="2">

    <AnalogClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/edit_colony"
        android:hint="@string/hint_colony"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="right"
        />


    <EditText
        android:id="@+id/edit_pop"
        android:hint="@string/hint_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="right"
        />

    <EditText
        android:id="@+id/edit_fleet"
        android:hint="@string/hint_fleet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="right"
        />


    <EditText
        android:id="@+id/edit_ships"
        android:hint="@string/hint_ships"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="right"
        />
    <Button
        android:id="@+id/submit_colony"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:textColor="#FFFFFF"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="right"
        />
    <Button
        android:id="@+id/submit_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:textColor="#FFFFFF"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="right"
        />
    <Button
        android:id="@+id/submit_fleet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:textColor="#FFFFFF"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="right"
        />
    <Button
        android:id="@+id/submit_ships"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:textColor="#FFFFFF"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="right"
        />

</GridLayout>
